Added rest of CSS styling and update page verbiage

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <h1>Colorado Summer Vacation ~ August 2019</h1>
     </header>  
     <main>
-       <p id="intro">My husband and I spent our honeymoon in Colorado in 2012 
+       <div class="intro">
+           <p>My husband and I spent our honeymoon in Colorado in 2012 
            and we wanted to introduce our six year old son, Riley, 
            to the beauty of "The Centennial State." In order to do this, we 
            went on a 10 day road trip during August 2019.</p>
+        </div>
 <article>
     <section>
         <a name="denver"></a>
@@ -71,8 +73,8 @@
     <img src="Images/PikesPeakSign.jpg" alt="Boy standing in front of Pikes Peak Elevation Sign">
     <figcaption>Riley at Pikes Peak, CO</figcaption>
 </figure>
-        <p>After the somewhat harrowing drive down Pikes Peak, we drove over 
-            to the Garden of the Gods to see the amazing red sandstone formations.</p>
+        <p>After the somewhat harrowing drive down Pikes Peak, we drove
+            to the Garden of the Gods National Park to see the amazing red sandstone formations.</p>
 <figure>
     <img src="Images/GardenOfTheGods.jpg" alt="Garden of the Gods in Colorado Springs, CO">
     <figcaption>Garden of the Gods in Colorado Springs, CO</figcaption>
@@ -102,7 +104,7 @@
     <figcaption>Riley smiling at Mt. Rushmore, SD</figcaption>
 </figure>
         <p>We stopped at a rest stop in Chamberlain, SD, and happened upon an amazing
-             work of art. The breathtaking 50-foot statue is named "Dignity."</p>
+             work of art. This breathtaking 50-foot statue is named "Dignity."</p>
 <figure>
     <img src="Images/DignityStatue.jpg" alt="Dignity Statue in Chamberlain, SD">
     <figcaption>Riley standing in front of the Dignity Statue in Chamberlain, SD</figcaption>
